--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "types": [
+      "react/next", 
+      "react-dom/next", 
+    ] 
   },
   "include": ["src"]
 }
