--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@main
       - run: npm run build
       - name: deploy to s3
-      - uses: awact/s3-action@master
+        uses: awact/s3-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
